Added support for masurca assembler Small fixes to improve hybrid assembly support

--- a/doc/BugBuilder_User_Guide.tex
+++ b/doc/BugBuilder_User_Guide.tex
@@ -273,11 +273,11 @@ with the BugBuilder scripts available on the default path.
 
 Certain packages can not be pre-installed in the virtual machine image due to
 licensing constraints, however BugBuilder is perfectly functional without
-these. The packages which can not be distributed directly are AbySS, SSpace, GapFiller
-and RNAmmer. The additional packages can be downloaded from the sites indicated
-in table \ref{tab:prereq}, then copied to the /opt/BugBuilder/src directory.
-The packages can then be installed by running the
-{\tt /opt/BugBuilder/bin/configure.pl} command, which will carry out the
+these. The packages which can not be distributed directly are AbySS, SSpace,
+GapFiller, and RNAmmer. The additional packages can be downloaded from
+the sites indicated in table \ref{tab:prereq}, then copied to the
+/opt/BugBuilder/src directory.  The packages can then be installed by running
+the {\tt /opt/BugBuilder/bin/configure.pl} command, which will carry out the
 necessary installation processes and generate an updated configuration file.
 
 \subsection{Full Installation}
