--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FEATURES
+* Use CGView instead of cirleator? Circleator sometimes produces 'odd' renderings...
 * Reinstate variant calling when reference sequence provided 
 * Add Quast to validation??
 * SMB sharing from VM to ease data transfer
