Updated email address

--- a/doc/BugBuilder_User_Guide.tex
+++ b/doc/BugBuilder_User_Guide.tex
@@ -24,7 +24,7 @@
 
 %\title{BugBuilder Users Guide}
 
-%\author{James Abbott (j.abbott@imperial.ac.uk)}
+%\author{James Abbott (j.abbott@dundee.ac.uk)}
 %\date{}
 \begin{document}
 \begin{titlepage}
@@ -34,7 +34,7 @@
   \vskip 0.1in
   \textsc{\normalsize Version 1.00 }
   \vskip 0.1in
-  \textsc{\normalsize James Abbott (j.abbott@imperial.ac.uk)}
+  \textsc{\normalsize James Abbott (j.abbott@dundee.ac.uk)}
 \end{center}
 
 %\renewcommand{\baselinestretch}{0.25}\normalsize
